--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 			  	<button class="js-menu-trigger sliding-menu-button"><a href="javascript:void(0)" class="nav-menu"> Menu</a></button>
 					<nav class="js-menu sliding-menu-content">
 					  <ul>
-					    <li><a href="javascript:void(0)">Item 1</a></li>
-					    <li><a href="javascript:void(0)">Item 2</a></li>
-					    <li><a href="javascript:void(0)">Item 3</a></li>
+					    <li><a href="javascript:void(0)">sign in</a></li>
+					    <li><a href="javascript:void(0)">about</a></li>
+					    <li><a href="javascript:void(0)">players</a></li>
+					    <li><a href="javascript:void(0)">captains</a></li>
+					    <li><a href="javascript:void(0)">leagues</a></li>
+					    <li><a href="javascript:void(0)">contact</a></li>
 					  </ul>
 					</nav>
 					<div class="js-menu-screen sliding-menu-fade-screen"></div>
@@ -24,10 +27,10 @@
 			    <div class="navigation-tools">
 					<a href="javascript:void(0)" >
 				   		<div id="slidr-div">
-						    <div class='box' data-slidr="one">7:00pm hockey 1 sub needed. </div>
-						    <div class='box' data-slidr="two">7:00pm hockey 1 sub needed. </div>
-						    <div class='box' data-slidr="three">7:00pm hockey 1 sub needed. </div>
-						    <div class='box' data-slidr="four">7:00pm hockey 1 sub needed. </div> 
+						    <div class='box' data-slidr="one">7pm | <img height="20" src="images/hockey.png"> | 3 subs </div>
+						    <div class='box' data-slidr="two">10pm | <img height="20" src="images/hockey.png"> | 1 sub </div>
+						    <div class='box' data-slidr="three">8pm | <img height="20" src="images/baseball.png"> | 2 sub</div>
+						    <div class='box' data-slidr="four">9pm | <img height="20" src="images/basketball.png"> | 1 sub</div> 
 					    </div>
 			    	</a>
 			    </div>
@@ -38,6 +41,9 @@
 		  </div>
 		  <p>The app recreational sports has been waiting for.</p>
 		  <button>Create your account</button>
+		  <div class='dropdown'>
+		  		<img src="images/dropdown.png">
+		  </div>
 		</header>
 		<script data-main="js/main" src="js/vendor/require.js"></script>
 	</body>
