--- a/index.html
+++ b/index.html
@@ -11,37 +11,35 @@
 		<header>
 		  <div class="navigation">
 			  <div class="navigation-wrapper">
-			  	<button class="js-menu-trigger sliding-menu-button"><a href="javascript:void(0)" class="nav-menu"> Menu</a></button>
+			  	<button class="js-menu-trigger sliding-menu-button"><a href="#" class="nav-menu">MENU</a></button>
 					<nav class="js-menu sliding-menu-content">
 					  <ul>
-					    <li><a href="javascript:void(0)">sign in</a></li>
-					    <li><a href="javascript:void(0)">about</a></li>
-					    <li><a href="javascript:void(0)">players</a></li>
-					    <li><a href="javascript:void(0)">captains</a></li>
-					    <li><a href="javascript:void(0)">leagues</a></li>
-					    <li><a href="javascript:void(0)">contact</a></li>
+					    <li><a href="#">about</a></li>
+					    <li><a href="#">players</a></li>
+					    <li><a href="#">captains</a></li>
+					    <li><a href="#">leagues</a></li>
+					    <li><a href="#">contact</a></li>
 					  </ul>
 					</nav>
 					<div class="js-menu-screen sliding-menu-fade-screen"></div>
-			    
-			    <div class="navigation-tools">
-					<a href="javascript:void(0)" >
-				   		<div id="slidr-div">
-						    <div class='box' data-slidr="one">7pm | <img height="20" src="images/hockey.png"> | 3 subs </div>
-						    <div class='box' data-slidr="two">10pm | <img height="20" src="images/hockey.png"> | 1 sub </div>
-						    <div class='box' data-slidr="three">8pm | <img height="20" src="images/baseball.png"> | 2 sub</div>
-						    <div class='box' data-slidr="four">9pm | <img height="20" src="images/basketball.png"> | 1 sub</div> 
-					    </div>
-			    	</a>
-			    </div>
+			  </div>
+			  <div class='signin-btn'>
+			  	<a href="#">sign in</a>
 			  </div>
 		  </div>
+		  <div id="slidr-div">
+		    <div class='ticker' data-slidr="one">7pm  3 subs </div>
+		    <div class='ticker' data-slidr="two">10pm 1 sub </div>
+		    <div class='ticker' data-slidr="three">8pm  2 subs</div>
+		    <div class='ticker' data-slidr="four">9pm  1 sub</div> 
+	    </div>
 		  <div id='logo'>
 		  	<img src="images/logo-bg.png">
 		  </div>
-		  <p>The app recreational sports has been waiting for.</p>
-		  <button>Create your account</button>
-		  <div class='dropdown'>
+		  <p class='tagline'>The app recreational sports has been waiting for. <br> Your team should never be short on players again. 
+		  </p>
+		  <button class='signup-btn'>sub in today</button>
+		  <div class='dropdown-arrow'>
 		  		<img src="images/dropdown.png">
 		  </div>
 		</header>
