--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	    <title>landing page</title>
 	    <link rel="stylesheet" type="text/css" href="css/main.css">
 	    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-
 	</head>
 	<body>
 		<header>
@@ -28,10 +27,10 @@
 			  </div>
 		  </div>
 		  <div id="slidr-div">
-		    <div class='ticker' data-slidr="one">7pm  3 subs </div>
-		    <div class='ticker' data-slidr="two">10pm 1 sub </div>
-		    <div class='ticker' data-slidr="three">8pm  2 subs</div>
-		    <div class='ticker' data-slidr="four">9pm  1 sub</div> 
+		    <div class='ticker' data-slidr="one">Toronto - a hockey team playing at 10pm today tonight needs 3 subs.</div>
+		    <div class='ticker' data-slidr="two">Toronto - a football team playing at 9pm today needs 1 sub.</div>
+		    <div class='ticker' data-slidr="three">Toronto - a baseball team playing at 10pm tomorrow needs 2 subs.</div>
+		    <div class='ticker' data-slidr="four">Toronto - a basketball team playing at 11pm tomorrow needs 3 subs.</div> 
 	    </div>
 		  <div id='logo'>
 		  	<img src="images/logo-bg.png">
