add scroll to functionality

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 	    <title>landing page</title>
 	    <link rel="stylesheet" type="text/css" href="css/main.css">
 	    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+	    <script data-main="js/main" src="js/vendor/require.js"></script>
 	</head>
 	<body>
-		<header>
+		<header id='top'>
 		  <div class="navigation">
 			  <div class="navigation-wrapper">
 			  	<button class="js-menu-trigger sliding-menu-button"><a href="#" class="nav-menu">MENU</a></button>
 					<nav class="js-menu sliding-menu-content">
+						<a class='scroll-link' href="#top"><img width='140' height="52" src="images/black-logo.png"></a>
 					  <ul>
-					    <li><a href="#">about</a></li>
-					    <li><a href="#">players</a></li>
-					    <li><a href="#">captains</a></li>
-					    <li><a href="#">leagues</a></li>
-					    <li><a href="#">contact</a></li>
+					    <li><a class='scroll-link' href="#findgame">find a game</a></li>
+					    <li><a class='scroll-link' href="#findsub">find subs</a></li>
+					    <li><a class='scroll-link' href="#leagues">affiliated leagues</a></li>
+					    <li><a class='scroll-link' href="#contact">contact</a></li>
 					  </ul>
 					</nav>
 					<div class="js-menu-screen sliding-menu-fade-screen"></div>
@@ -42,6 +43,17 @@
 		  		<img src="images/dropdown.png">
 		  </div>
 		</header>
-		<script data-main="js/main" src="js/vendor/require.js"></script>
+		<section id='findgame'>
+			
+		</section>
+		<section id='findsub'>
+			
+		</section>
+		<section id='leagues'>
+			
+		</section>
+		<footer id='contact'>
+			
+		</footer>
 	</body>
 </html>
