latest: cards, leagues, etc

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
 				      <label class="modal-close" for="modal-1"></label>
 				      <h1>Sign In</h1>
 				      <form>
-					      	<label for='email'>Email</label>
-					      	<input id='email' type='email'> 
-					      	<label for='password'>Password</label>
-					      	<input id='password' type='password'> 
+				      		<div>
+							<i class="fa fa-user"></i>
+					      	<input id='email' type='email' placeholder='example@gmail.com'> 
+					      	</div>
+					      	<div>
+					      	<i class="fa fa-lock"></i>
+					      	<input id='password' type='password' placeholder='password'> 
+					      	</div>
 					      	<input type='submit' value='submit'>
 				      </form>
 				    </div>
@@ -80,7 +84,7 @@
 						<p>Subzie connects teams looking for Substitute players with players looking for a game.</p>
 					</div>
 					<div class='soln-img'>
-			
+						
 					</div>
 				</div>
 				<br class='clear'>
@@ -142,10 +146,10 @@
 			<section class='testimonials'>
 				<h1>What Players are Saying</h1>
 				<div id="slidr-div2">
-				    <div class='quote' data-slidr="one">"Subzie is so cool I use it all the time."</div>
-				    <div class='quote' data-slidr="two">"I use to play only a couple nights a week. Now I can play almost every night!"</div>
-				    <div class='quote' data-slidr="three">"There's no better way to stay active and in shape."</div>
-				    <div class='quote' data-slidr="four">"I met some of my best buddies through Subzie."</div> 
+				    <div class='quote' data-slidr="one"><i>"Subzie is so cool I use it all the time."</i></div>
+				    <div class='quote' data-slidr="two"><i>"I use to play only a couple nights a week. Now I can play almost every night!"</i></div>
+				    <div class='quote' data-slidr="three"><i>"There's no better way to stay active and in shape."</i></div>
+				    <div class='quote' data-slidr="four"><i>"I met some of my best buddies through Subzie."</i></div> 
 			    </div>
 			</section>
 
@@ -157,6 +161,13 @@
 			<!-- third section -->
 			<section id='leagues'>
 				<h1>Trusted by Canada's Top Leagues</h1>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<button class='signup-btn animated rubberBand'>sub in today</button>
 			</section>
 		</div>
 
