--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 				<br class='clear'>
 			</section>
 			<!-- first section -->
-			<section id='findgame'>
+			<div id='findgame'>
 				<div class="cards">
 				  <div class="card">
 				    <div class="card-image">
 				      <img src="images/hockey-pic.png" alt="">
 				    </div>
 				    <div class="card-header">
-				      Team Captains
+				      Captains
 				    </div>
 				    <div class="card-copy">
 				      <h3>Find the right Sub</h3>
@@ -140,10 +140,10 @@
 				    </div>
 				  </div>
 				</div>
-			</section>
+			</div>
 
 
-			<section class='testimonials'>
+			<div class='testimonials'>
 				<h1>What Players are Saying</h1>
 				<div id="slidr-div2">
 				    <div class='quote' data-slidr="one"><i>"Subzie is so cool I use it all the time."</i></div>
@@ -151,11 +151,19 @@
 				    <div class='quote' data-slidr="three"><i>"There's no better way to stay active and in shape."</i></div>
 				    <div class='quote' data-slidr="four"><i>"I met some of my best buddies through Subzie."</i></div> 
 			    </div>
-			</section>
+			</div>
 
 			<!-- second section -->
 			<section id='findsub'>
-				
+				<div class='container'>
+					<div class='sub-info'>
+						<h1>The app recreational sports has been waiting&nbsp;for.</h1>
+						<p>Subzie connects teams looking for Substitute players with players looking for a game.</p>
+					</div>
+					<div class='sub-finder'>
+						
+					</div>
+				</div>
 			</section>
 
 			<!-- third section -->
