--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	    <link rel="stylesheet" href="css/animate.css">
 	    <script data-main="js/main" src="js/lib/require.js"></script>
+	    <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Subzie is a sports app connecting athlete to recreational sports">
+		<meta name="keywords" content="sports, subs, hockey, sports app, subzie, soccer, basketball, dodgeball, football, baseball">
+		<meta name="author" content="Subzie">
 	</head>
 	<body>
 
@@ -42,15 +47,17 @@
 				      <label class="modal-close" for="modal-1"></label>
 				      <h1>Sign In</h1>
 				      <form>
-				      		<div>
-							<i class="fa fa-user"></i>
+				      		<div class='form-feild'> 
+							<i class="fa fa-user fa-2x"></i>
 					      	<input id='email' type='email' placeholder='example@gmail.com'> 
 					      	</div>
-					      	<div>
-					      	<i class="fa fa-lock"></i>
+					      	<div class='form-feild'>
+					      	<i class="fa fa-lock fa-2x"></i>
 					      	<input id='password' type='password' placeholder='password'> 
 					      	</div>
-					      	<input type='submit' value='submit'>
+					      	<p>Forgot Password?</p>
+					      	<p><input type='submit' value='submit'></p>
+					      	<p>dont have an account? <a href="">Sign up</a> </p>
 				      </form>
 				    </div>
 			    </div>
