add company logos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		  <div id='logo'>
 		  	<img src="images/logo-bg.png">
 		  </div>
-		  <p class='tagline'> Your team should never be short on players again. 
+		  <p class='tagline'> We help teams find substitute players.<br> Your team should never be short on players again.  
 		  </p>
 		  <button class='signup-btn animated rubberBand'>sub in today</button>
 		  <div class='dropdown-arrow'>
@@ -177,9 +177,9 @@
 			<section id='leagues'>
 				<h1>Trusted by Canada's Top Leagues</h1>
 				<br>
-				<br>
-				<br>
-				<br>
+				<a href="http://ashl.adultrechockey.ca"><img src="images/ashl-logo.jpeg"></a>
+				<a href="http://www.dmhl.ca"><img src="images/dmhl_logo.png"></a>
+				<a href="http://www.dawksports.com/"><img src="images/DS-Logo.jpg"></a>
 				<br>
 				<br>
 				<button class='signup-btn animated rubberBand'>sub in today</button>
