lighten up page and take away background image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		  <!-- nav  -->
 		  <div class="navigation">
 			  <div class="navigation-wrapper">
-			  	<button class="js-menu-trigger sliding-menu-button"><a href="#" class="nav-menu"><i class="fa fa-bars"></i> MENU</a></button>
+			  	<div class="js-menu-trigger sliding-menu-button"><a href="#" class="nav-menu"><i class="fa fa-bars"></i> MENU</a></div>
 					<nav class="js-menu sliding-menu-content">
 						<a class='scroll-link' href="#top"><img width='140' height="52" src="images/black-logo.png"></a>
 					  <ul>
@@ -101,7 +101,8 @@
 				<div class="cards">
 				  <div class="card">
 				    <div class="card-image">
-				      <img src="images/hockey-pic.png" alt="">
+				    <br>
+				      <img src="images/icon-Captain.png" alt="">
 				    </div>
 				    <div class="card-header">
 				      Captains
@@ -116,8 +117,10 @@
 				  </div>
 
 				  <div class="card">
+
 				    <div class="card-image">
-				      <img src="images/ultimate.png" alt="">
+				    <br>
+				      <img src="images/icon-team.png" alt="">
 				    </div>
 				    <div class="card-header">
 				      Players
@@ -133,7 +136,8 @@
 
 				  <div class="card">
 				    <div class="card-image">
-				      <img src="images/rugby.png" alt="">
+				    <br>
+				      <img src="images/icon-league.png" alt="">
 				    </div>
 				    <div class="card-header">
 				     Leagues 
