--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 					      	<i class="fa fa-lock fa-2x"></i>
 					      	<input id='password' type='password' placeholder='password'> 
 					      	</div>
+					      	<p><input type='submit' value='sign in'></p>
 					      	<p>Forgot Password?</p>
-					      	<p><input type='submit' value='submit'></p>
 					      	<p>dont have an account? <a href="">Sign up</a> </p>
 				      </form>
 				    </div>
@@ -154,14 +154,37 @@
 			</div>
 
 
-			<div class='testimonials'>
+			<div class="testimonials grid-items-lines">
 				<h1>What Players are Saying</h1>
-				<div id="slidr-div2">
-				    <div class='quote' data-slidr="one"><i>"Subzie is so cool I use it all the time."</i></div>
-				    <div class='quote' data-slidr="two"><i>"I use to play only a couple nights a week. Now I can play almost every night!"</i></div>
-				    <div class='quote' data-slidr="three"><i>"There's no better way to stay active and in shape."</i></div>
-				    <div class='quote' data-slidr="four"><i>"I met some of my best buddies through Subzie."</i></div> 
+				<div class='grid-item'>
+				    <img width='100' height="100" src="images/profile1.jpeg">
+				    <p>"Lorem ipsum dolor sit amet, elit. Rem, illum."</p>
+			  	</div>
+
+			    <div class='grid-item'>
+				    <img width='100' height="100" src="images/profile2.jpeg">
+				    <p>"Lorem ipsum consectetur dolor sit amet, consectetur adipisicing elit."</p>
+			  	</div>
+			    
+			  	<div class='grid-item'>
+				    <img width='100' height="100" src="images/profile3.jpeg">
+				    <p>"Lorem ipsum dolor sit amet, elit."</p>
+			  	</div>
+			    
+			  	<div class='grid-item'>
+				    <img width='100' height="100" src="images/profile4.jpeg">
+				    <p>"Lorem ipsum dolor sit amet, elit. Rem, illum."</p>
 			    </div>
+			    <div class='grid-item'>
+				    <img width='100' height="100" src="images/profile5.jpeg">
+				    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, illum."</p>
+			  	</div>
+			    <div class='grid-item'>
+				    <img width='100' height="100" src="images/profile6.jpeg">
+				    <p>"Lorem ipsum dolor sit amet, elit. Rem, illum."</p>
+			  	</div>
+			  <div class="right-cover"></div>
+			  <div class="bottom-cover"></div>
 			</div>
 
 			<!-- second section -->
