--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
 			<section id='leagues'>
 				<h1>Trusted by Canada's Top Leagues</h1>
 				<br>
+				 <p>Disclaimer area lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, nostrum repudiandae saepe.</p>
+				 <br>
 				<a href="http://ashl.adultrechockey.ca"><img src="images/ashl-logo.jpeg"></a>
 				<a href="http://www.dmhl.ca"><img src="images/dmhl_logo.png"></a>
 				<a href="http://www.dawksports.com/"><img src="images/DS-Logo.jpg"></a>
@@ -214,7 +216,7 @@
 		</div>
 
 		<!-- footer -->
-		<footer class="footer" role="contentinfo">
+		<footer id='contact' class="footer" >
 		  <div class="footer-logo">
 		    <img src="images/logo-transparent.png" alt="Logo image">
 		  </div>
